# ChangeLog for perl-core/IO
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/IO/ChangeLog,v 1.10 2009/03/18 07:29:47 josejx Exp $

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> IO-1.23.01.ebuild:
  Marked ppc stable.

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> IO-1.23.01.ebuild:
  Marked ~ppc for bug #251655.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> IO-1.23.01.ebuild:
  Stable on mips.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> IO-1.23.01.ebuild:
  ia64 stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> IO-1.23.01.ebuild:
  Stable on x86, bug #169152.

  23 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> IO-1.23.01.ebuild:
  Add ~ia64 keyword.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org> IO-1.23.01.ebuild:
  Marking sparc stable

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org> IO-1.23.01.ebuild:
  Marking amd64 stable

  07 Nov 2006; Christian Faulhammer <opfer@gentoo.org> IO-1.23.01.ebuild:
  keyworded ~x86, bug #154253

*IO-1.23.01 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +IO-1.23.01.ebuild:
  New dep for Test-Class - requires newer version than shipped with perl
