@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/IO/IO-1.25.ebuild,v 1.1 2009/05/14 10:07:34 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=GBARR
+inherit perl-module
+
+DESCRIPTION="load various IO modules"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
+IUSE=""
+
+SRC_TEST=do
