@@ -1,4 +1,6 @@
 DIST IO-1.2301.tar.gz 49006 RMD160 74c9cf0d092b78bafb3cf83139add0f371a5086e SHA1 d374b102082ab584ce4ef53ef85d233cdc75ffa7 SHA256 ea4662a3dc47b79b06837e64824cb32cd8c1919439772fe38f4b9e89bebad46e
+DIST IO-1.25.tar.gz 52710 RMD160 29b0d8eaafe87dfeb021862dfe97df58ebb833bb SHA1 3eb700e772f5485514b0402f7ace49d41e7cc071 SHA256 89790db8b9281235dc995c1a85d532042ff68a90e1504abd39d463f05623e7b5
 EBUILD IO-1.23.01.ebuild 585 RMD160 53b7d326b4d485f20c300f3939e8f001fb22bf39 SHA1 7bc8829af5723a01059004ae786ec246f3fd2547 SHA256 39f3a8a934064304135601caffcce7269f95d76f22d38b12aa8e68b1716b8aa1
-MISC ChangeLog 1241 RMD160 f56654ca4cca0992bbb56fbe74f07d8ca93b5b12 SHA1 9900930942237f46d778b41663d73dcc3c263e4d SHA256 92f4d44056f56d421696e61af4f763cdde98760d7b9b29df95d6c20cc73bc230
+EBUILD IO-1.25.ebuild 398 RMD160 29e6e0d284dca05dfe4dba43b821c95c0010d642 SHA1 21b40f262c73d7089b1e4cc76605dd3c57b92980 SHA256 2102430df40c7144fe304df2389662e27ff2648f24111e562ba97505fdd42c47
+MISC ChangeLog 1477 RMD160 20b4adddc222dd0c7256de289d694240d1d26431 SHA1 5590aba4f5f183113c419dbeb19cecde98d6e0ae SHA256 9fa060f58054138997ccea577344476bd5eb9cdf9244a69842095d2b1b69e7c5
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
